--- a/Data_Preprocess.ipynb
+++ b/Data_Preprocess.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.cloud import bigquery\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from google.oauth2 import service_account\n",
     "\n",
@@ -29,232 +30,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>entity_id</th>\n",
-       "      <th>category_code</th>\n",
-       "      <th>country_code</th>\n",
-       "      <th>state_code</th>\n",
-       "      <th>city</th>\n",
-       "      <th>investment_rounds</th>\n",
-       "      <th>funding_rounds</th>\n",
-       "      <th>funding_total_usd</th>\n",
-       "      <th>milestones</th>\n",
-       "      <th>lifetime</th>\n",
-       "      <th>...</th>\n",
-       "      <th>funding_period</th>\n",
-       "      <th>milestone_period</th>\n",
-       "      <th>investment_rate</th>\n",
-       "      <th>funding_rate</th>\n",
-       "      <th>milestone_rate</th>\n",
-       "      <th>inverse_dt_since_last_investment</th>\n",
-       "      <th>inverse_dt_since_last_funding</th>\n",
-       "      <th>inverse_dt_since_last_milestone</th>\n",
-       "      <th>inverse_data_creation_gap</th>\n",
-       "      <th>update_gap</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>325</td>\n",
-       "      <td>enterprise</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>Cambridge</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>103100000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4018</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1861</td>\n",
-       "      <td>452</td>\n",
-       "      <td>0.002457</td>\n",
-       "      <td>0.003224</td>\n",
-       "      <td>0.006637</td>\n",
-       "      <td>0.002457</td>\n",
-       "      <td>0.000577</td>\n",
-       "      <td>0.001675</td>\n",
-       "      <td>0.000249</td>\n",
-       "      <td>2155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>60298</td>\n",
-       "      <td>finance</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Austin</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>450000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>571</td>\n",
-       "      <td>0.012605</td>\n",
-       "      <td>0.040000</td>\n",
-       "      <td>0.005254</td>\n",
-       "      <td>0.002188</td>\n",
-       "      <td>0.000899</td>\n",
-       "      <td>0.001692</td>\n",
-       "      <td>0.000521</td>\n",
-       "      <td>951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38270</td>\n",
-       "      <td>mobile</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Fountain Valley</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2132</td>\n",
-       "      <td>...</td>\n",
-       "      <td>746</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.001873</td>\n",
-       "      <td>0.004021</td>\n",
-       "      <td>0.000463</td>\n",
-       "      <td>0.001873</td>\n",
-       "      <td>0.001873</td>\n",
-       "      <td>0.000463</td>\n",
-       "      <td>0.000469</td>\n",
-       "      <td>853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32234</td>\n",
-       "      <td>mobile</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>25000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2132</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000691</td>\n",
-       "      <td>0.000479</td>\n",
-       "      <td>0.000608</td>\n",
-       "      <td>0.000691</td>\n",
-       "      <td>0.000479</td>\n",
-       "      <td>0.000608</td>\n",
-       "      <td>0.000469</td>\n",
-       "      <td>363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>199080</td>\n",
-       "      <td>finance</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1051</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.002012</td>\n",
-       "      <td>0.001825</td>\n",
-       "      <td>0.001431</td>\n",
-       "      <td>0.002012</td>\n",
-       "      <td>0.001825</td>\n",
-       "      <td>0.001431</td>\n",
-       "      <td>0.000951</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   entity_id category_code country_code state_code             city  \\\n",
-       "0        325    enterprise          USA         MA        Cambridge   \n",
-       "1      60298       finance          USA         TX           Austin   \n",
-       "2      38270        mobile          USA         CA  Fountain Valley   \n",
-       "3      32234        mobile          USA         MA          Kolkata   \n",
-       "4     199080       finance          USA         CA      Los Angeles   \n",
-       "\n",
-       "   investment_rounds  funding_rounds  funding_total_usd  milestones  lifetime  \\\n",
-       "0                1.0             6.0        103100000.0         3.0      4018   \n",
-       "1                3.0             2.0           450000.0         3.0      1918   \n",
-       "2                1.0             3.0          6000000.0         1.0      2132   \n",
-       "3                1.0             1.0            25000.0         1.0      2132   \n",
-       "4                1.0             1.0          6000000.0         1.0      1051   \n",
-       "\n",
-       "   ... funding_period  milestone_period  investment_rate  funding_rate  \\\n",
-       "0  ...           1861               452         0.002457      0.003224   \n",
-       "1  ...             50               571         0.012605      0.040000   \n",
-       "2  ...            746                 0         0.001873      0.004021   \n",
-       "3  ...              0                 0         0.000691      0.000479   \n",
-       "4  ...              0                 0         0.002012      0.001825   \n",
-       "\n",
-       "   milestone_rate  inverse_dt_since_last_investment  \\\n",
-       "0        0.006637                          0.002457   \n",
-       "1        0.005254                          0.002188   \n",
-       "2        0.000463                          0.001873   \n",
-       "3        0.000608                          0.000691   \n",
-       "4        0.001431                          0.002012   \n",
-       "\n",
-       "   inverse_dt_since_last_funding  inverse_dt_since_last_milestone  \\\n",
-       "0                       0.000577                         0.001675   \n",
-       "1                       0.000899                         0.001692   \n",
-       "2                       0.001873                         0.000463   \n",
-       "3                       0.000479                         0.000608   \n",
-       "4                       0.001825                         0.001431   \n",
-       "\n",
-       "   inverse_data_creation_gap  update_gap  \n",
-       "0                   0.000249        2155  \n",
-       "1                   0.000521         951  \n",
-       "2                   0.000469         853  \n",
-       "3                   0.000469         363  \n",
-       "4                   0.000951           8  \n",
-       "\n",
-       "[5 rows x 33 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head(5)"
+    "category_encoded1 = np.zeros(len(df))\n",
+    "category_encoded2 = np.zeros(len(df))\n",
+    "for c in set(np.array(df[\"category_code\"])):\n",
+    "  if c == None:\n",
+    "    continue\n",
+    "  stat_f1 = np.average(df[\"status_encoded_field1\"][df[\"category_code\"] == c])\n",
+    "  stat_f2 = np.average(df[\"status_encoded_field2\"][df[\"category_code\"] == c])\n",
+    "  category_encoded1[df[\"category_code\"]==c], category_encoded2[df[\"category_code\"]==c] = stat_f1, stat_f2\n",
+    "df[\"category_encoded1\"], df[\"category_encoded2\"] = category_encoded1, category_encoded2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_encoded1 = np.zeros(len(df))\n",
+    "country_encoded2 = np.zeros(len(df))\n",
+    "for c in set(np.array(df[\"country_code\"])):\n",
+    "  if c == None:\n",
+    "    continue\n",
+    "  stat_f1 = np.average(df[\"status_encoded_field1\"][df[\"country_code\"] == c])\n",
+    "  stat_f2 = np.average(df[\"status_encoded_field2\"][df[\"country_code\"] == c])\n",
+    "  country_encoded1[df[\"country_code\"]==c], country_encoded2[df[\"country_code\"]==c] = stat_f1, stat_f2\n",
+    "df[\"country_encoded1\"], df[\"country_encoded2\"] = country_encoded1, country_encoded2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_encoded1 = np.zeros(len(df))\n",
+    "state_encoded2 = np.zeros(len(df))\n",
+    "for c in set(np.array(df[\"state_code\"])):\n",
+    "  if c == None:\n",
+    "    continue\n",
+    "  stat_f1 = np.average(df[\"status_encoded_field1\"][df[\"state_code\"] == c])\n",
+    "  stat_f2 = np.average(df[\"status_encoded_field2\"][df[\"state_code\"] == c])\n",
+    "  state_encoded1[df[\"state_code\"]==c], state_encoded2[df[\"state_code\"]==c] = stat_f1, stat_f2\n",
+    "df[\"state_encoded1\"], df[\"state_encoded2\"] = state_encoded1, state_encoded2"
    ]
   }
  ],
@@ -274,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
