target encoding round3

--- a/Data_Preprocess.ipynb
+++ b/Data_Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,38 +66,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_encoded = np.zeros(len(df))\n",
+    "country_encoded_op = np.zeros(len(df))\n",
+    "country_encoded_ac = np.zeros(len(df))\n",
+    "country_encoded_ip = np.zeros(len(df))\n",
+    "country_encoded_cl = np.zeros(len(df))\n",
     "for c in set(np.array(df[\"country_code\"])):\n",
     "  if c == None:\n",
     "    continue\n",
-    "  stat_op = np.average(df[\"status_operating\"][df[\"country_code\"] == c])\n",
-    "  stat_ac = np.average(df[\"status_acquired\"][df[\"country_code\"] == c])\n",
-    "  stat_ip = np.average(df[\"status_ipo\"][df[\"country_code\"] == c])\n",
-    "  stat_cl = np.average(df[\"status_closed\"][df[\"country_code\"] == c])\n",
-    "  country_encoded[df[\"country_code\"]==c] = (stat_op + stat_ac + stat_ip + stat_cl) / 4\n",
-    "df[\"country_encoded\"] = country_encoded"
+    "  df_c = df[\"country_code\"] == c\n",
+    "  stat_op = np.average(df[\"status_operating\"][df_c]) \n",
+    "  stat_ac = np.average(df[\"status_acquired\"][df_c]) \n",
+    "  stat_ip = np.average(df[\"status_ipo\"][df_c]) \n",
+    "  stat_cl = np.average(df[\"status_closed\"][df_c]) \n",
+    "  country_encoded_op[df_c], country_encoded_ac[df_c], \\\n",
+    "  country_encoded_ip[df_c],country_encoded_cl[df_c], = stat_op, stat_ac, stat_ip, stat_cl\n",
+    "df[\"country_encoded_op\"], df[\"country_encoded_ac\"], \\\n",
+    "df[\"country_encoded_ip\"], df[\"country_encoded_cl\"], = country_encoded_op, country_encoded_ac, country_encoded_ip, country_encoded_cl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_encoded = np.zeros(len(df))\n",
+    "state_encoded_op = np.zeros(len(df))\n",
+    "state_encoded_ac = np.zeros(len(df))\n",
+    "state_encoded_ip = np.zeros(len(df))\n",
+    "state_encoded_cl = np.zeros(len(df))\n",
     "for c in set(np.array(df[\"state_code\"])):\n",
     "  if c == None:\n",
     "    continue\n",
-    "  stat_op = np.average(df[\"status_operating\"][df[\"state_code\"] == c])\n",
-    "  stat_ac = np.average(df[\"status_acquired\"][df[\"state_code\"] == c])\n",
-    "  stat_ip = np.average(df[\"status_ipo\"][df[\"state_code\"] == c])\n",
-    "  stat_cl = np.average(df[\"status_closed\"][df[\"state_code\"] == c])\n",
-    "  state_encoded[df[\"state_code\"]==c] = (stat_op + stat_ac + stat_ip + stat_cl) / 4\n",
-    "df[\"state_encoded\"] = state_encoded"
+    "  df_c = df[\"state_code\"] == c\n",
+    "  stat_op = np.average(df[\"status_operating\"][df_c]) \n",
+    "  stat_ac = np.average(df[\"status_acquired\"][df_c]) \n",
+    "  stat_ip = np.average(df[\"status_ipo\"][df_c]) \n",
+    "  stat_cl = np.average(df[\"status_closed\"][df_c]) \n",
+    "  state_encoded_op[df_c], state_encoded_ac[df_c], \\\n",
+    "  state_encoded_ip[df_c],state_encoded_cl[df_c], = stat_op, stat_ac, stat_ip, stat_cl\n",
+    "df[\"state_encoded_op\"], df[\"state_encoded_ac\"], \\\n",
+    "df[\"state_encoded_ip\"], df[\"state_encoded_cl\"], = state_encoded_op, state_encoded_ac, state_encoded_ip, state_encoded_cl"
    ]
   },
   {
