--- a/Data_Preprocess.ipynb
+++ b/Data_Preprocess.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.cloud import bigquery\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from google.oauth2 import service_account\n",
     "\n",
@@ -30,173 +29,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_op = df[\"status_operating\"] == 1\n",
-    "df_ac = df[\"status_acquired\"] == 1\n",
-    "df_ip = df[\"status_ipo\"] == 1\n",
-    "df_cl = df[\"status_closed\"] == 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_encoded_op = np.zeros(len(df))\n",
-    "category_encoded_ac = np.zeros(len(df))\n",
-    "category_encoded_ip = np.zeros(len(df))\n",
-    "category_encoded_cl = np.zeros(len(df))\n",
-    "for c in set(np.array(df[\"category_code\"])):\n",
-    "  if c == None:\n",
-    "    continue\n",
-    "  df_c = df[\"category_code\"] == c\n",
-    "  stat_op = np.average(df[\"status_operating\"][df_c]) \n",
-    "  stat_ac = np.average(df[\"status_acquired\"][df_c]) \n",
-    "  stat_ip = np.average(df[\"status_ipo\"][df_c]) \n",
-    "  stat_cl = np.average(df[\"status_closed\"][df_c]) \n",
-    "  category_encoded_op[df_c], category_encoded_ac[df_c], \\\n",
-    "  category_encoded_ip[df_c],category_encoded_cl[df_c], = stat_op, stat_ac, stat_ip, stat_cl\n",
-    "df[\"category_encoded_op\"], df[\"category_encoded_ac\"], \\\n",
-    "df[\"category_encoded_ip\"], df[\"category_encoded_cl\"], = category_encoded_op, category_encoded_ac, category_encoded_ip, category_encoded_cl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "country_encoded_op = np.zeros(len(df))\n",
-    "country_encoded_ac = np.zeros(len(df))\n",
-    "country_encoded_ip = np.zeros(len(df))\n",
-    "country_encoded_cl = np.zeros(len(df))\n",
-    "for c in set(np.array(df[\"country_code\"])):\n",
-    "  if c == None:\n",
-    "    continue\n",
-    "  df_c = df[\"country_code\"] == c\n",
-    "  stat_op = np.average(df[\"status_operating\"][df_c]) \n",
-    "  stat_ac = np.average(df[\"status_acquired\"][df_c]) \n",
-    "  stat_ip = np.average(df[\"status_ipo\"][df_c]) \n",
-    "  stat_cl = np.average(df[\"status_closed\"][df_c]) \n",
-    "  country_encoded_op[df_c], country_encoded_ac[df_c], \\\n",
-    "  country_encoded_ip[df_c],country_encoded_cl[df_c], = stat_op, stat_ac, stat_ip, stat_cl\n",
-    "df[\"country_encoded_op\"], df[\"country_encoded_ac\"], \\\n",
-    "df[\"country_encoded_ip\"], df[\"country_encoded_cl\"], = country_encoded_op, country_encoded_ac, country_encoded_ip, country_encoded_cl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_encoded_op = np.zeros(len(df))\n",
-    "state_encoded_ac = np.zeros(len(df))\n",
-    "state_encoded_ip = np.zeros(len(df))\n",
-    "state_encoded_cl = np.zeros(len(df))\n",
-    "for c in set(np.array(df[\"state_code\"])):\n",
-    "  if c == None:\n",
-    "    continue\n",
-    "  df_c = df[\"state_code\"] == c\n",
-    "  stat_op = np.average(df[\"status_operating\"][df_c]) \n",
-    "  stat_ac = np.average(df[\"status_acquired\"][df_c]) \n",
-    "  stat_ip = np.average(df[\"status_ipo\"][df_c]) \n",
-    "  stat_cl = np.average(df[\"status_closed\"][df_c]) \n",
-    "  state_encoded_op[df_c], state_encoded_ac[df_c], \\\n",
-    "  state_encoded_ip[df_c],state_encoded_cl[df_c], = stat_op, stat_ac, stat_ip, stat_cl\n",
-    "df[\"state_encoded_op\"], df[\"state_encoded_ac\"], \\\n",
-    "df[\"state_encoded_ip\"], df[\"state_encoded_cl\"], = state_encoded_op, state_encoded_ac, state_encoded_ip, state_encoded_cl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project = client.project\n",
-    "dataset_ref = bigquery.DatasetReference(project, 'startups')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table join_table contains 35 columns.\n"
-     ]
-    }
-   ],
-   "source": [
-    "table_id = \"join_table\"\n",
-    "table_ref = dataset_ref.table(table_id)\n",
-    "table = client.get_table(table_ref)\n",
-    "print(\"Table {} contains {} columns.\".format(table_id, len(table.schema)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "job_config = bigquery.LoadJobConfig()\n",
-    "job_config.write_disposition = bigquery.WriteDisposition.WRITE_TRUNCATE\n",
-    "# job_config.schema_update_options = [\n",
-    "#     bigquery.SchemaUpdateOption.ALLOW_FIELD_ADDITION\n",
-    "# ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "job_config.schema =  table.schema + [\n",
-    "    bigquery.SchemaField(\"category_encoded\", \"FLOAT\", mode=\"NULLABLE\"), \n",
-    "    bigquery.SchemaField(\"country_encoded\", \"FLOAT\", mode=\"NULLABLE\"),\n",
-    "    bigquery.SchemaField(\"state_encoded\", \"FLOAT\", mode=\"NULLABLE\"),\n",
-    "    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>entity_id</th>\n",
+       "      <th>category_code</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>city</th>\n",
+       "      <th>investment_rounds</th>\n",
+       "      <th>funding_rounds</th>\n",
+       "      <th>funding_total_usd</th>\n",
+       "      <th>milestones</th>\n",
+       "      <th>lifetime</th>\n",
+       "      <th>...</th>\n",
+       "      <th>funding_period</th>\n",
+       "      <th>milestone_period</th>\n",
+       "      <th>investment_rate</th>\n",
+       "      <th>funding_rate</th>\n",
+       "      <th>milestone_rate</th>\n",
+       "      <th>inverse_dt_since_last_investment</th>\n",
+       "      <th>inverse_dt_since_last_funding</th>\n",
+       "      <th>inverse_dt_since_last_milestone</th>\n",
+       "      <th>inverse_data_creation_gap</th>\n",
+       "      <th>update_gap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>325</td>\n",
+       "      <td>enterprise</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>Cambridge</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>103100000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4018</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1861</td>\n",
+       "      <td>452</td>\n",
+       "      <td>0.002457</td>\n",
+       "      <td>0.003224</td>\n",
+       "      <td>0.006637</td>\n",
+       "      <td>0.002457</td>\n",
+       "      <td>0.000577</td>\n",
+       "      <td>0.001675</td>\n",
+       "      <td>0.000249</td>\n",
+       "      <td>2155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60298</td>\n",
+       "      <td>finance</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>450000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1918</td>\n",
+       "      <td>...</td>\n",
+       "      <td>50</td>\n",
+       "      <td>571</td>\n",
+       "      <td>0.012605</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.005254</td>\n",
+       "      <td>0.002188</td>\n",
+       "      <td>0.000899</td>\n",
+       "      <td>0.001692</td>\n",
+       "      <td>0.000521</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38270</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Fountain Valley</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6000000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2132</td>\n",
+       "      <td>...</td>\n",
+       "      <td>746</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.001873</td>\n",
+       "      <td>0.004021</td>\n",
+       "      <td>0.000463</td>\n",
+       "      <td>0.001873</td>\n",
+       "      <td>0.001873</td>\n",
+       "      <td>0.000463</td>\n",
+       "      <td>0.000469</td>\n",
+       "      <td>853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32234</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2132</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000691</td>\n",
+       "      <td>0.000479</td>\n",
+       "      <td>0.000608</td>\n",
+       "      <td>0.000691</td>\n",
+       "      <td>0.000479</td>\n",
+       "      <td>0.000608</td>\n",
+       "      <td>0.000469</td>\n",
+       "      <td>363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>199080</td>\n",
+       "      <td>finance</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6000000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1051</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.002012</td>\n",
+       "      <td>0.001825</td>\n",
+       "      <td>0.001431</td>\n",
+       "      <td>0.002012</td>\n",
+       "      <td>0.001825</td>\n",
+       "      <td>0.001431</td>\n",
+       "      <td>0.000951</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "LoadJob<project=crunchbase-startups, location=US, id=ba500e1f-88bb-4908-806d-cc549a59cec2>"
+       "   entity_id category_code country_code state_code             city  \\\n",
+       "0        325    enterprise          USA         MA        Cambridge   \n",
+       "1      60298       finance          USA         TX           Austin   \n",
+       "2      38270        mobile          USA         CA  Fountain Valley   \n",
+       "3      32234        mobile          USA         MA          Kolkata   \n",
+       "4     199080       finance          USA         CA      Los Angeles   \n",
+       "\n",
+       "   investment_rounds  funding_rounds  funding_total_usd  milestones  lifetime  \\\n",
+       "0                1.0             6.0        103100000.0         3.0      4018   \n",
+       "1                3.0             2.0           450000.0         3.0      1918   \n",
+       "2                1.0             3.0          6000000.0         1.0      2132   \n",
+       "3                1.0             1.0            25000.0         1.0      2132   \n",
+       "4                1.0             1.0          6000000.0         1.0      1051   \n",
+       "\n",
+       "   ... funding_period  milestone_period  investment_rate  funding_rate  \\\n",
+       "0  ...           1861               452         0.002457      0.003224   \n",
+       "1  ...             50               571         0.012605      0.040000   \n",
+       "2  ...            746                 0         0.001873      0.004021   \n",
+       "3  ...              0                 0         0.000691      0.000479   \n",
+       "4  ...              0                 0         0.002012      0.001825   \n",
+       "\n",
+       "   milestone_rate  inverse_dt_since_last_investment  \\\n",
+       "0        0.006637                          0.002457   \n",
+       "1        0.005254                          0.002188   \n",
+       "2        0.000463                          0.001873   \n",
+       "3        0.000608                          0.000691   \n",
+       "4        0.001431                          0.002012   \n",
+       "\n",
+       "   inverse_dt_since_last_funding  inverse_dt_since_last_milestone  \\\n",
+       "0                       0.000577                         0.001675   \n",
+       "1                       0.000899                         0.001692   \n",
+       "2                       0.001873                         0.000463   \n",
+       "3                       0.000479                         0.000608   \n",
+       "4                       0.001825                         0.001431   \n",
+       "\n",
+       "   inverse_data_creation_gap  update_gap  \n",
+       "0                   0.000249        2155  \n",
+       "1                   0.000521         951  \n",
+       "2                   0.000469         853  \n",
+       "3                   0.000469         363  \n",
+       "4                   0.000951           8  \n",
+       "\n",
+       "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "job = client.load_table_from_dataframe(\n",
-    "    df, \"crunchbase-startups.startups.join_table\", job_config=job_config\n",
-    ")  # Make an API request.\n",
-    "job.result()  # Wait for the job to complete."
+    "df.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -215,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
