--- a/Data_Preprocess.ipynb
+++ b/Data_Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +29,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 3,
-=======
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,240 +187,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
->>>>>>> Stashed changes
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>entity_id</th>\n",
-       "      <th>category_code</th>\n",
-       "      <th>country_code</th>\n",
-       "      <th>state_code</th>\n",
-       "      <th>city</th>\n",
-       "      <th>investment_rounds</th>\n",
-       "      <th>funding_rounds</th>\n",
-       "      <th>funding_total_usd</th>\n",
-       "      <th>milestones</th>\n",
-       "      <th>lifetime</th>\n",
-       "      <th>...</th>\n",
-       "      <th>funding_period</th>\n",
-       "      <th>milestone_period</th>\n",
-       "      <th>investment_rate</th>\n",
-       "      <th>funding_rate</th>\n",
-       "      <th>milestone_rate</th>\n",
-       "      <th>inverse_dt_since_last_investment</th>\n",
-       "      <th>inverse_dt_since_last_funding</th>\n",
-       "      <th>inverse_dt_since_last_milestone</th>\n",
-       "      <th>inverse_data_creation_gap</th>\n",
-       "      <th>update_gap</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>325</td>\n",
-       "      <td>enterprise</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>Cambridge</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>103100000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4018</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1861</td>\n",
-       "      <td>452</td>\n",
-       "      <td>0.002457</td>\n",
-       "      <td>0.003224</td>\n",
-       "      <td>0.006637</td>\n",
-       "      <td>0.002457</td>\n",
-       "      <td>0.000577</td>\n",
-       "      <td>0.001675</td>\n",
-       "      <td>0.000249</td>\n",
-       "      <td>2155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>60298</td>\n",
-       "      <td>finance</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Austin</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>450000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>571</td>\n",
-       "      <td>0.012605</td>\n",
-       "      <td>0.040000</td>\n",
-       "      <td>0.005254</td>\n",
-       "      <td>0.002188</td>\n",
-       "      <td>0.000899</td>\n",
-       "      <td>0.001692</td>\n",
-       "      <td>0.000521</td>\n",
-       "      <td>951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38270</td>\n",
-       "      <td>mobile</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Fountain Valley</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2132</td>\n",
-       "      <td>...</td>\n",
-       "      <td>746</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.001873</td>\n",
-       "      <td>0.004021</td>\n",
-       "      <td>0.000463</td>\n",
-       "      <td>0.001873</td>\n",
-       "      <td>0.001873</td>\n",
-       "      <td>0.000463</td>\n",
-       "      <td>0.000469</td>\n",
-       "      <td>853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32234</td>\n",
-       "      <td>mobile</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>25000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2132</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000691</td>\n",
-       "      <td>0.000479</td>\n",
-       "      <td>0.000608</td>\n",
-       "      <td>0.000691</td>\n",
-       "      <td>0.000479</td>\n",
-       "      <td>0.000608</td>\n",
-       "      <td>0.000469</td>\n",
-       "      <td>363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>199080</td>\n",
-       "      <td>finance</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1051</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.002012</td>\n",
-       "      <td>0.001825</td>\n",
-       "      <td>0.001431</td>\n",
-       "      <td>0.002012</td>\n",
-       "      <td>0.001825</td>\n",
-       "      <td>0.001431</td>\n",
-       "      <td>0.000951</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-<<<<<<< Updated upstream
-       "   entity_id category_code country_code state_code             city  \\\n",
-       "0        325    enterprise          USA         MA        Cambridge   \n",
-       "1      60298       finance          USA         TX           Austin   \n",
-       "2      38270        mobile          USA         CA  Fountain Valley   \n",
-       "3      32234        mobile          USA         MA          Kolkata   \n",
-       "4     199080       finance          USA         CA      Los Angeles   \n",
-       "\n",
-       "   investment_rounds  funding_rounds  funding_total_usd  milestones  lifetime  \\\n",
-       "0                1.0             6.0        103100000.0         3.0      4018   \n",
-       "1                3.0             2.0           450000.0         3.0      1918   \n",
-       "2                1.0             3.0          6000000.0         1.0      2132   \n",
-       "3                1.0             1.0            25000.0         1.0      2132   \n",
-       "4                1.0             1.0          6000000.0         1.0      1051   \n",
-       "\n",
-       "   ... funding_period  milestone_period  investment_rate  funding_rate  \\\n",
-       "0  ...           1861               452         0.002457      0.003224   \n",
-       "1  ...             50               571         0.012605      0.040000   \n",
-       "2  ...            746                 0         0.001873      0.004021   \n",
-       "3  ...              0                 0         0.000691      0.000479   \n",
-       "4  ...              0                 0         0.002012      0.001825   \n",
-       "\n",
-       "   milestone_rate  inverse_dt_since_last_investment  \\\n",
-       "0        0.006637                          0.002457   \n",
-       "1        0.005254                          0.002188   \n",
-       "2        0.000463                          0.001873   \n",
-       "3        0.000608                          0.000691   \n",
-       "4        0.001431                          0.002012   \n",
-       "\n",
-       "   inverse_dt_since_last_funding  inverse_dt_since_last_milestone  \\\n",
-       "0                       0.000577                         0.001675   \n",
-       "1                       0.000899                         0.001692   \n",
-       "2                       0.001873                         0.000463   \n",
-       "3                       0.000479                         0.000608   \n",
-       "4                       0.001825                         0.001431   \n",
-       "\n",
-       "   inverse_data_creation_gap  update_gap  \n",
-       "0                   0.000249        2155  \n",
-       "1                   0.000521         951  \n",
-       "2                   0.000469         853  \n",
-       "3                   0.000469         363  \n",
-       "4                   0.000951           8  \n",
-       "\n",
-       "[5 rows x 33 columns]"
+       "LoadJob<project=crunchbase-startups, location=US, id=69bd612e-93cc-4164-9106-4938c63d4dfe>"
       ]
      },
-     "execution_count": 3,
-=======
-       "LoadJob<project=crunchbase-startups, location=US, id=b3fcea3c-cf31-4429-abee-a3b31bb6232d>"
-      ]
-     },
-     "execution_count": 68,
->>>>>>> Stashed changes
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "job = client.load_table_from_dataframe(\n",
+    "    df, \"crunchbase-startups.startups.join_table\", job_config=job_config\n",
+    ")  # Make an API request.\n",
+    "job.result()  # Wait for the job to complete."
    ]
   }
  ],
